Fix: Bug with overflow progress in ProgressBar.

--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -2,11 +2,12 @@
   background-color: #4b4b4b;
   border-radius: 1rem;
   margin-block: 1rem;
+  overflow: hidden;
   width: 100%;
 
   &__progress {
     background-color: green;
     border-radius: 1rem;
-    height: 24px;
+    height: 1.5rem;
   }
 }
